--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Priyam Bhuinya Portfolio</title>
+    <title>susnata Ghosh Portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -119,7 +119,7 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Priyam Bhuinya</a>
+	      <a class="navbar-brand" href="index.html">Susnsta Ghosh</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -141,13 +141,13 @@
 	      	<div class="overlay"></div>
 	         <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/priyamfront.jpg);">
+	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/susnata.jpg);">
 	          	 <div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
-			            <h1 class="mb-4 mt-3">I'm <span>Priyam Bhuinya</span></h1>
+			            <h1 class="mb-4 mt-3">I'm <span>susnata Ghosh</span></h1>
 
 						<!-- Element to contain animated typing -->
 						<span id="typing-animation"></span>
@@ -213,16 +213,16 @@
 								<div class="row">
 									<div class="col-sm-6 col-md-5">
 									  <div class="about-img">
-										<img src="images/portpholiopriyam.jpg" class="img-fluid rounded b-shadow-a" alt="">
+										<img src="images/susnata.jpg" class="img-fluid rounded b-shadow-a" alt="">
 									  </div>
 									</div>
 									<!-- Details next to profile image -->
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
-										<p><span class="title-s">Name: </span> <span>Priyam Bhuinya</span></p>
+										<p><span class="title-s">Name: </span> <span>Susnata Ghosh</span></p>
 										<!-- <p><span class="title-s"> </span> <span></span></p> -->
 										<p><span class="title-s">Experience: </span> <span>Fresher</span></p>
-										<p><span class="title-s">Address: </span> <span>Tarakeswar,Hooghly,India</span></p>
+										<p><span class="title-s">Address: </span> <span>jhargram,India</span></p>
 									  </div>
 									</div>
 								  </div>
@@ -270,13 +270,13 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>I'm Priyam Bhuinya, a Web Developer. I'm a undergraduate, currently learning Information Technology & looking for suitable opportunities to enhance my skills in a more effective way possible.
+								<p>I'm Susnata Ghosh, a Web Developer. I'm a undergraduate, currently learning Information Technology & looking for suitable opportunities to enhance my skills in a more effective way possible.
 
 									I'm simply a tech-obsessed guy with a lot of dreams in my head, not only that, I'm a fast and active learner as well.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Web Developer </span></li>
 									<!-- <li class="d-flex"><span></span> <span></span></li> -->
-									<li class="d-flex"><span>Education:</span> <span>Information Technology(2nd year)</span></li>
+									<li class="d-flex"><span>Education:</span> <span>CSE (A.I)</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Bengali, Hindi</span></li>
 									<!-- <li class="d-flex"><span></span> <span></span></li> -->
 									<li class="d-flex"><span>Other Skills:</span> <span>MS-word, MS-Excel, MS-Powerpoint</span></li>
@@ -293,7 +293,7 @@
 									<!-- <span class="number" data-number="">0</span> <span>+</span> -->
 									<!-- <span>&nbsp; Projects completed</span> -->
 								</p>
-								<p><a href="https://www.linkedin.com/in/priyam-bh%C3%B9%C3%AF%C3%B1y%C3%A6-719913290?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
+								<p><a href="https://www.linkedin.com/in/susnata-ghosh-6883b8335?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
 							</div>
 						</div>
 					</div>
@@ -363,27 +363,27 @@
 			<div class="row">
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2023-currently</span>
-    					<h2>Information Technology</h2>
-    					<span class="position">JIS COLLEGE OF ENGINEERING</span>
+    					<span class="date">2024-currently</span>
+    					<h2>CSE(A.I)</h2>
+    					<span class="position">UNIVERSITY OF ENGINEERING AND MANAGEMENT KOLKATA</span>
     					<!-- <p class="mt-4">Grade: </p> -->
     				</div>
     			</div>
 
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2022-2023</span>
+    					<span class="date">2022-2024</span>
     					<h2>Higher Secondary School</h2>
-    					<span class="position">Tarakeswar High School</span>
+    					<span class="position"> VIDYASAGAR SHISHU NIKETAN </span>
     					<p class="mt-4">Grade: First class distinction.</p>
     				</div>
 				</div>
 
 				<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2015-2021</span>
+    					<span class="date">2015-2022</span>
     					<h2> Secondary School</h2>
-    					<span class="position">Gouribati Radharani Das High School</span>
+    					<span class="position"> VIDYASAGAR SHISHU NIKETAN </span>
     					<p class="mt-4">Grade: First class distinction.</p>
     				</div>
 				</div>
@@ -553,7 +553,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://8509320746">+ 8509320746</a></p>
+	            <p><a href="tel://8509320746">+ 9932047041</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -562,7 +562,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:bhuinyapriyam@gmail.com">bhuinyapriyam@gmail.com</a></p>
+	            <p><a href="mailto:susnataghoshjgm@gmail.com">susnataghoshjgm@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -587,10 +587,10 @@
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
 					  <li class="ftco-animate normal-txt">Find me on  </li>
 					  <!-- <li class="ftco-animate"><a href=""><span class="icon-youtube"></span></a></li> -->
-					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/priyam-bh%C3%B9%C3%AF%C3%B1y%C3%A6-719913290?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><span class="icon-linkedin"></span></a></li>  
-					  <li class="ftco-animate"><a href="https://x.com/Priyam090604?t=oorb45uTz8s49LUc6NTPUg&s=09"><span class="icon-twitter"></span></a></li>
-					  <li class="ftco-animate"><a href="https://www.facebook.com/PriyamBhuinya090604?mibextid=ZbWKwL"><span class="icon-facebook"></span></a></li>
-				      <li class="ftco-animate"><a href="https://www.instagram.com/_priyam09_?utm_source=qr&igsh=ZXYyNHN6MjF1cTB5"><span class="icon-instagram"></span></a></li>
+					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/susnata-ghosh-6883b8335?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><span class="icon-linkedin"></span></a></li>  
+					  <li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=100084162287763&mibextid=ZbWKwL"><span class="icon-twitter"></span></a></li>
+					  <li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=100084162287763&mibextid=ZbWKwL"><span class="icon-facebook"></span></a></li>
+				      <li class="ftco-animate"><a href="https://www.instagram.com/1hesurvivalist/profilecard/?igsh=ZGpmYTY3M3F5OHMz"><span class="icon-instagram"></span></a></li>
 					</ul>
 				<br>
 		   </div>
