--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
 
 						// Create an array of typing text
 						const typingTexts = [
-						'IT student  ',
-						' 2nd year ',
+						'CSE student  ',
+						'1st year ',
 						'  ',
 						];
 
